<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nden.gapquiz.Question4"
    android:background="@color/GapBg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/sourceQ4"
        android:layout_marginTop="20dp"
        android:text="@string/source"
        android:textStyle="italic|bold"
        android:textSize="13sp"
        android:lineSpacingExtra="10dp"
        android:textColor="#6257a9"
        android:typeface="serif" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/Q4Intro"
        android:layout_below="@id/sourceQ4"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Q4Intro"
        android:textSize="13sp"
        android:textStyle="italic"
        android:lineSpacingExtra="10dp"
        android:textColor="#160101"
        android:typeface="serif" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_below="@id/Q4Intro"
        android:id = "@+id/Q4Instruction"
        android:layout_marginBottom="20dp"
        android:text="@string/Q4Instruct"
        android:textSize="13sp"
        android:lineSpacingExtra="10dp"
        android:textColor="#160101"
        android:typeface="serif"
        android:padding="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Q4Instruction"
        android:id = "@+id/Q4"
        android:layout_marginBottom="20dp"
        android:text="@string/Q4"
        android:textSize="13sp"
        android:lineSpacingExtra="10dp"
        android:textColor="#160101"
        android:typeface="serif" />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:id="@+id/Q4OptA"
        android:textSize="13sp"
        android:layout_marginBottom="5dp"
        android:text="@string/optionAQ4"
        android:layout_below="@+id/Q4"
        android:lineSpacingExtra="10dp"
        android:padding="10dp"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="13sp"
        android:id="@+id/Q4OptB"
        android:layout_marginBottom="5dp"
        android:text="@string/optionBQ4"
        android:layout_below="@+id/Q4OptA"
        android:lineSpacingExtra="10dp"
        android:padding="10dp"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="13sp"
        android:id="@+id/Q4OptC"
        android:layout_marginBottom="5dp"
        android:text="@string/optionCQ4"
        android:layout_below="@+id/Q4OptB"
        android:lineSpacingExtra="10dp"
        android:padding="10dp"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="13sp"
        android:id="@+id/Q4OptD"
        android:layout_marginBottom="5dp"
        android:text="@string/optionDQ4"
        android:layout_below="@+id/Q4OptC"
        android:lineSpacingExtra="10dp"
        android:padding="10dp"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="13sp"
        android:id="@+id/Q4OptE"
        android:layout_marginBottom="5dp"
        android:text="@string/optionEQ4"
        android:layout_below="@+id/Q4OptD"
        android:lineSpacingExtra="10dp"
        android:padding="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Q4OptE"
        android:text="check \n Answer"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/checkAnswer"
        android:textSize="13sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW \n ANSWER"
        android:id="@+id/showAnswer"
        android:layout_alignTop="@+id/checkAnswer"
        android:layout_toEndOf="@+id/checkAnswer"
        android:textSize="13sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/nextActivity"
        android:layout_alignBottom="@+id/showAnswer"
        android:layout_toEndOf="@+id/showAnswer"
        android:textSize="13sp"
        android:onClick="buttonOnClickNextQ4"/>

</RelativeLayout>
</ScrollView>